--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1,13 +1,77 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f39f2a61dfd093a7ee8edc2c2edd981fef3372aa00e4e4fcdab141f011cfcbf5"
+  "signature": "sha256:180ebbd1e0332e99ba0224d92c0657b1b706c47c2a7f72abb380cf2a197fb1ba"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "filename = ''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[0.83106214495953923, 0.8948620659084715, 1.0089355536750293, 1.1064801954952523, 1.1586600399617066]\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "A=[14.4520877642,\n",
+      "15.7244769154,\n",
+      "17.5585896685,\n",
+      "19.3518397734,\n",
+      "20.5324407442]\n",
+      "B=[14.8194546647,\n",
+      "15.7384862304,\n",
+      "17.4975671083,\n",
+      "18.8195299032,\n",
+      "19.5102794187]\n",
+      "C=[14.3430392382,\n",
+      "15.4998044798,\n",
+      "17.70878406,\n",
+      "19.8266793509,\n",
+      "20.6352535431]\n",
+      "D=[14.0889195338,\n",
+      "15.170581376,\n",
+      "17.2889225069,\n",
+      "18.8286740723,\n",
+      "19.7717753445]\n",
+      "E = get_avg_array([A,B,C,D])\n",
+      "\n",
+      "normfun = normto1\n",
+      "\n",
+      "print get_avg_array([normfun(A),normfun(B),normfun(C),normfun(D)])\n",
+      "print normfun(E)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[0.83114795297502753, 0.89490637125040973, 1.0089965835018619, 1.1063913128821745, 1.158557779390526]\n",
+        "[0.83106214495953923, 0.8948620659084715, 1.0089355536750293, 1.1064801954952523, 1.1586600399617066]\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
     {
      "cell_type": "code",
      "collapsed": false,
