--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:180ebbd1e0332e99ba0224d92c0657b1b706c47c2a7f72abb380cf2a197fb1ba"
+  "signature": "sha256:dcfb99a0e32a4e98cc18a24ab622658d7b1b89981b7e6c8fc21f088d3d1d6fbb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,20 +12,32 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "filename = ''"
+      "execfile('/home/xiaodongli/software/pythonlib/stdA.py')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "array_to_str_fmtted(np.linspace(0.7,1.3,13))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
        "text": [
-        "[0.83106214495953923, 0.8948620659084715, 1.0089355536750293, 1.1064801954952523, 1.1586600399617066]\n"
+        "'0.7000 0.7500 0.8000 0.8500 0.9000 0.9500 1.0000 1.0500 1.1000 1.1500 1.2000 1.2500 1.3000 '"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
